@@ -10,6 +10,9 @@ changes since 2.9.14:
 	- debian/rules forgot sqllite
 	- removed libpqpp from build-depends
 	- recursor accidentally linked in mysql (christopher meerwald)
+	- fixed instability in pdns_recursor (had to do with the sorted nameserver stuff)
+	- improved output of stats
+	- LDAP compiles again!
 
 changes since 2.9.13:
 	- logging to syslog can now be restricted (norbert)
